@@ -50,6 +50,7 @@ dillo-fltk2
  - Fixed a SEGFAULT bug in http.c (handling of web->url).
  - Fixed handling of #anchors with repush, and other operations.
  - Implemented a_Dialog_choice5(). May be used by dpis and dillo.
+ - Improved parsing of collapsing white space.
    Patches: Jorge Arellano Cid
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color, panel_size, geometry, fullscreen,
